src/main/kotlin/com/example/worktimemanagement/error/InvalidPasswordException.kt
package com.example.worktimemanagement.error

class InvalidPasswordException(message: String) : RuntimeException(message)